Fixed Chart click on scrollbar. Added addingFormula in formulabar.

--- a/src/components/Formulabar/index.less
+++ b/src/components/Formulabar/index.less
@@ -17,6 +17,9 @@
   font: 13px Helvetica;
   height: 24px;
 }
+.formulabar-leaf {
+  border-radius: 4px;
+}
 [contenteditable] {
     -webkit-user-select: text;
     user-select: text;
