--- a/src/components/Spreadsheet/index.less
+++ b/src/components/Spreadsheet/index.less
@@ -461,7 +461,7 @@ body {
     line-height: 0;
     z-index: 100;
     pointer-events: auto;
-    padding: 0 3px;
+    // padding: 0 3px;
 
     .editor-cellreference {
       box-sizing: content-box;
